tests/success/EtaReductionReduced2.vix
type Unit' = unit
loop unit = loop unit
test4 (z : Int) = loop unit z
