tests/type-error/Loop.vix
type Unit' where
  unit : Unit'

loop : Unit'
loop = loop
